remove awards module
