# swagger-static/swagger-spec.yaml
@@ -835,40 +835,6 @@ components:
         - github
         - vkontakte
         - telegram
-    AwardNameDto:
-      type: object
-      properties:
-        en:
-          type: string
-          description: Название на английском
-        ru:
-          type: string
-          description: Название на русском
-      required:
-        - en
-        - ru
-    Award:
-      type: object
-      properties:
-        _id:
-          description: Идентификатор
-          allOf:
-            - $ref: '#/components/schemas/ObjectId'
-        name:
-          description: Название
-          allOf:
-            - $ref: '#/components/schemas/AwardNameDto'
-        icon:
-          type: string
-          description: Ссылка на иконку
-        description:
-          type: string
-          description: Описание
-      required:
-        - _id
-        - name
-        - icon
-        - description
     User:
       type: object
       properties:
@@ -911,11 +877,6 @@ components:
           description: Ссылки
           allOf:
             - $ref: '#/components/schemas/UserLinksDto'
-        awards:
-          description: Награды
-          type: array
-          items:
-            $ref: '#/components/schemas/Award'
         projects:
           description: Проекты
           type: array
@@ -933,7 +894,6 @@ components:
         - avatar
         - about
         - links
-        - awards
         - projects
     Project:
       type: object
@@ -1263,11 +1223,6 @@ components:
           description: Ссылки
           allOf:
             - $ref: '#/components/schemas/UserLinksDto'
-        awards:
-          description: Награды
-          type: array
-          items:
-            $ref: '#/components/schemas/Award'
         projects:
           description: Проекты
           type: array
@@ -1284,7 +1239,6 @@ components:
         - avatar
         - about
         - links
-        - awards
         - projects
     SignInDto:
       type: object
